--- a/jpashop/src/main/resources/application.properties
+++ b/jpashop/src/main/resources/application.properties
@@ -12,3 +12,6 @@ spring.jpa.hibernate.ddl-auto=none
 
 logging.level.org.hibernate.SQL=debug
 logging.level.org.hibernate.orm.jdbc.bind = trace
+
+//??? ?? ??
+spring.output.ansi.enabled=always
