--- a/jpashop/build.gradle
+++ b/jpashop/build.gradle
@@ -43,9 +43,11 @@ dependencies {
 	testImplementation 'junit:junit:4.13.1'
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	//배포에서는 빼기
 	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.9.0'
-	
+
+
 }
 
 tasks.named('test') {
