--- a/jpashop/src/main/resources/application.properties
+++ b/jpashop/src/main/resources/application.properties
@@ -13,5 +13,5 @@ spring.jpa.hibernate.ddl-auto=none
 logging.level.org.hibernate.SQL=debug
 logging.level.org.hibernate.orm.jdbc.bind = trace
 
-//??? ?? ??
+##colors
 spring.output.ansi.enabled=always
